--- a/styles/table.css
+++ b/styles/table.css
@@ -13,6 +13,7 @@ thead tr:first-child th:last-child {
     border-radius: .3em;
     background-color: #fff;
     margin-top: max(10%, 150px);
+    margin-top: max(10%, 150px);
     margin-left: auto;
     margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
@@ -58,8 +59,6 @@ table {
     border-radius: 10px;
 }
 
-
-
 th,
 td {
     font-weight: normal;
@@ -81,7 +80,6 @@ thead {
     padding: 0.5em;
     letter-spacing: 1px;
 }
-
 
 .table-info {
     width: 100%;
@@ -254,7 +252,8 @@ thead {
         0 14px 25px rgba(0, 0, 0, 0.12);
 
 }
-.table-search-box input:focus{
+
+.table-search-box input:focus {
     outline: 2px solid #4441ff;
 }
 
@@ -262,9 +261,9 @@ thead {
 .table-search-box input:valid {
     padding: 0 10px 0 10px;
     width: 200px;
-    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03), 
-    0 3.1px 5.5px rgba(0, 0, 0, 0.08), 
-    0 14px 25px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03),
+        0 3.1px 5.5px rgba(0, 0, 0, 0.08),
+        0 14px 25px rgba(0, 0, 0, 0.12);
 }
 
 
